# barq-graphdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark_output.txt  docker-compose.benchmark.yml  docker-compose.yml
.github/workflows/: benchmarks.yml  ci.yml
benches/: barq_complete_suite.rs  http_latency.rs  phase0_storage.rs  phase1_graph.rs  phase2_vector.rs  phase3_hnsw.rs  phase3_hybrid.rs  phase3_write.rs  real_model_suite.rs
docs/: API_REFERENCE.md  BENCHMARK_RESULTS.md  COMPETITIVE_ANALYSIS.md  PHASE3_HNSW_ANALYSIS.md  PHASE3_SUMMARY.md  PHASE3_WRITE_ANALYSIS.md  PHASE4_RELEASE_NOTES.md  PHASE5_LATENCY_ANALYSIS.md  PHASE5_LOAD_TESTING.md  PHASE5_SUMMARY.md  PRODUCTION_DEPLOYMENT.md
scripts/: setup_competitors.sh
sdk/csharp/: README.md
sdk/csharp/BarqGraphDb/: BarqGraphDb.csproj  Client.cs  Models.cs
sdk/go/: README.md  client.go  client_test.go  go.mod
sdk/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
sdk/nodejs/proto/: barq.proto
sdk/nodejs/src/: client.ts  index.ts  types.ts
sdk/python/: README.md  pyproject.toml  test_sdk.py
sdk/python/barq_graphdb/: __init__.py  client.py  models.py
src/: agent.rs  api.rs  batch_indexer.rs  batch_queue.rs  bench_utils.rs  error.rs  graph.rs  grpc.rs  hybrid.rs  lib.rs  storage.rs  vector.rs
src/vector/: hnsw.rs  mod.rs
tests/: integration_test_phase0.rs  integration_test_phase1.rs  integration_test_phase2.rs  integration_test_phase3.rs  integration_test_phase4.rs
