[package]
name = "barq_graphdb"
version = "0.0.1"
edition = "2021"
authors = ["YASSERRMD"]
description = "A production-grade graph+vector database for AI agents"
license = "MIT"
repository = "https://github.com/YASSERRMD/barq-graphdb"
keywords = ["graph", "vector", "database", "ai", "agents"]
categories = ["database", "data-structures"]

[[bin]]
name = "barqg"
path = "src/bin/barqg.rs"

[[bin]]
name = "barqg_server"
path = "src/bin/barqg_server.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
parking_lot = "0.12"
axum = "0.7"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
