[package]
name = "barq_graphdb"
version = "0.0.1"
edition = "2021"
authors = ["YASSERRMD"]
description = "A production-grade graph+vector database for AI agents"
license = "MIT"
repository = "https://github.com/YASSERRMD/barq-graphdb"
keywords = ["graph", "vector", "database", "ai", "agents"]
categories = ["database", "data-structures"]

[[bin]]
name = "barqg"
path = "src/bin/barqg.rs"

[[bin]]
name = "barqg_server"
path = "src/bin/barqg_server.rs"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
parking_lot = "0.12"
axum = "0.7"
rand = "0.8"
hnsw_rs = "0.3"
dashmap = "5.5"
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
fastembed = "5.5.0"

[[bench]]
name = "phase0_storage"
harness = false

[[bench]]
name = "phase1_graph"
harness = false

[[bench]]
name = "phase2_vector"
harness = false

[[bench]]
name = "phase3_hybrid"
harness = false

[[bench]]
name = "barq_complete_suite"
harness = false

[[bench]]
name = "phase3_hnsw"
harness = false

[[bench]]
name = "phase3_write"
harness = false

[[bench]]
name = "real_model_suite"
harness = false

[[bench]]
name = "http_latency"
harness = false
